[package]
name = "casca"
version = "0.1.0"
authors = ["Matteo Vinci (Iranon)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
finder = "0.1.5"
colour = "0.5.0"
quit = "1.1.0"